Fix the broken ui design of modal close icon

--- a/css/css.css
+++ b/css/css.css
@@ -638,24 +638,14 @@ nav ul li.active a, nav ul li.active a:hover, nav ul li.active a:focus, nav ul l
   top: 1rem;
   right: 1rem;
   color: #aaa;
-  text-align: center;
   cursor: pointer;
   position: fixed;
-  font-size: 3rem;
-  line-height: 2.5rem;
   width: 3rem;
   height: 3rem;
-  background-color: #fff;
-  text-decoration: none;
-
-  padding: .25rem;
-  border: 2px solid currentColor;
-  border-radius: 50%;
 }
 
 .close:hover, .close:focus {
   color: indianred;
-  border-color: indianred;
 }
 
 @media (min-width: 992px) {
@@ -663,10 +653,25 @@ nav ul li.active a, nav ul li.active a:hover, nav ul li.active a:focus, nav ul l
 
   .close{
     color: white;
-    top: 1rem;
-    right: 3rem;
-    background: none;
+    top: 3rem;
+    right: 2rem;
   }
+}
+
+.close:before, .close:after {
+  width: 100%;
+  height: 2px;
+  content: "";
+  position: absolute;
+  background: currentColor;
+}
+
+.close:before {
+  transform: rotate(45deg);
+}
+
+.close:after {
+  transform: rotate(-45deg);
 }
 
 .open {
