--- a/src/_modal.css
+++ b/src/_modal.css
@@ -49,30 +49,36 @@
   top: 1rem;
   right: 1rem;
   color: #aaa;
-  text-align: center;
   cursor: pointer;
   position: fixed;
-  font-size: 3rem;
-  line-height: 2.5rem;
   width: 3rem;
   height: 3rem;
-  background-color: #fff;
-  text-decoration: none;
 
-  padding: .25rem;
-  border: 2px solid currentColor;
-  border-radius: 50%;
 
   &:hover, &:focus {
     color: indianred;
-    border-color: indianred;
   }
 
   @media (min-width: 992px) {
     color: white;
-    top: 1rem;
-    right: 3rem;
-    background: none;
+    top: 3rem;
+    right: 2rem;
+  }
+
+  &:before,
+  &:after {
+    width: 100%;
+    height: 2px;
+    content: "";
+    position: absolute;
+    background: currentColor;
+  }
+
+  &:before {
+    transform: rotate(45deg);
+  }
+  &:after {
+    transform: rotate(-45deg);
   }
 }
 
